force-app/main/default/objects/Tower__c/fields/Available_Units__c.field-meta.xml
<CustomField>
    <fullName>Available_Units__c</fullName>
    <label>Available Units</label>
    <summaryFilterItems>
        <field>Unit__c.Unit_Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summarizedField>Unit__c.Id</summarizedField>
    <summaryForeignKey>Unit__c.Tower__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>