force-app/main/default/objects/Tower__c/fields/Configuration_Mix__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Mix__c</fullName>
    <label>Configuration Mix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>