force-app/main/default/objects/Tower__c/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <label>Construction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Planned</fullName><default>true</default><label>Planned</label></value>
            <value><fullName>Excavation</fullName><default>false</default><label>Excavation</label></value>
            <value><fullName>Under Construction</fullName><default>false</default><label>Under Construction</label></value>
            <value><fullName>Finishing</fullName><default>false</default><label>Finishing</label></value>
            <value><fullName>Ready</fullName><default>false</default><label>Ready</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>