force-app/main/default/objects/Tower__c/fields/Slab_Progress__c.field-meta.xml
<CustomField>
    <fullName>Slab_Progress__c</fullName>
    <label>Slab Progress</label>
    <length>40</length>
    <type>Text</type>
</CustomField>