force-app/main/default/objects/Tower__c/fields/Total_Floors__c.field-meta.xml
<CustomField>
    <fullName>Total_Floors__c</fullName>
    <label>Total Floors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>