force-app/main/default/objects/Tower__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <summaryForeignKey>Unit__c.Tower__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>