force-app/main/default/objects/Tower__c/fields/Tower_Code__c.field-meta.xml
<CustomField>
    <fullName>Tower_Code__c</fullName>
    <formula>Project__r.Project_Code__c + &quot;-&quot; + IF(TEXT(Tower_Type__c) = &quot;Commercial Block&quot;, &quot;B&quot;, &quot;T&quot;) + RIGHT(&quot;00&quot; &amp; TEXT(Tower_Number__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Code</label>
    <type>Text</type>
</CustomField>