force-app/main/default/objects/Tower__c/fields/Tower_Number__c.field-meta.xml
<CustomField>
    <fullName>Tower_Number__c</fullName>
    <label>Tower Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>