force-app/main/default/objects/Tower__c/fields/Tower_Type__c.field-meta.xml
<CustomField>
    <fullName>Tower_Type__c</fullName>
    <label>Tower Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Tower</fullName>
                <default>true</default>
                <label>Residential Tower</label>
            </value>
            <value>
                <fullName>Commercial Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>