force-app/main/default/objects/Tower__c/fields/Units_Per_Floor__c.field-meta.xml
<CustomField>
    <fullName>Units_Per_Floor__c</fullName>
    <label>Units Per Floor</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>