force-app/main/default/objects/Tower__c/recordTypes/Commercial_Block.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Block</fullName>
    <active>true</active>
    <label>Commercial Block</label>
</RecordType>