force-app/main/default/objects/Tower__c/recordTypes/Residential_Tower.recordType-meta.xml
<RecordType>
    <fullName>Residential_Tower</fullName>
    <active>true</active>
    <label>Residential Tower</label>
</RecordType>